--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/sherpa_fav.svg" />
     <script type="text/babel"> </script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
